项目新增了购物车页面逻辑，实现商品添加与删除功能，引入了localstroge本地存储对象，实现了跳转功能，需完善

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --inline --hot --open --port 5009"
+    "dev": "webpack-dev-server --inline --hot --open --port 5009",
+	"dist": "webpack -p"
   },
   "keywords": [],
   "author": "",
